# ipo_crewai

./: .gitignore  01_PROFIL_LINKEDIN_Arnaud Defaut.md  02_POSTS_LINKEDIN_Arnaud Defaut.md  03_COMMENTAIRES_PROSPECT_SUR_NOS_POSTS_Arnaud Defaut.md  03_COMMENTAIRES_PROSPECT_SUR_NOS_POSTS_Hervé GOUSSET.md  04_FICHE_ENTREPRISE_SITE_Arnaud Defaut.md  04_FICHE_ENTREPRISE_SITE_PRODIFA.md  05_FICHE_SIRENE_MCP_PRODIFA.md  06_VEILLE_SECTORIELLE_Arnaud Defaut.md  06_VEILLE_SECTORIELLE_Hervé GOUSSET.md  07_STRATEGIE_CONTACT EXPLISEAT (49)  Fabien Vieghe — Responsable Production.md  07_STRATEGIE_CONTACT_Arnaud Defaut.md  07_STRATEGIE_CONTACT_Cédric TERESA (Plant Manager, Expliseat).md  07_STRATEGIE_CONTACT_Hervé GOUSSET.md  README.md  package-lock.json  pyproject.toml  report.md
doccrewai/: Quickstart - CrewAI.md
knowledge/: info_IPO.md
src/epolin/: crew.py  main.py
src/epolin/config/: agents.yaml  tasks.yaml
